RESOLVED FIXED11518
REGRESSION (r14376): View Source not available after Back navigation from a non-HTML page
https://bugs.webkit.org/show_bug.cgi?id=11518
Summary REGRESSION (r14376): View Source not available after Back navigation from a n...
mitz
Reported 2006-11-04 07:41:33 PST
See the URL. After you follow the link to the text document and go back, View Source is disabled. The same holds for coming back from images and PDFs. r14376 is when this regressed for text documents. Images were still using WebImageView at the time.
Attachments
Update the FrameLoader's MIME type for pages coming from the b/f cache (1.74 KB, patch)
2007-02-19 08:47 PST, mitz
aroben: review+
mitz
Comment 1 2007-01-21 23:47:42 PST
*** Bug 12360 has been marked as a duplicate of this bug. ***
mitz
Comment 2 2007-01-21 23:48:20 PST
mitz
Comment 3 2007-02-19 08:47:04 PST
Created attachment 13238 [details] Update the FrameLoader's MIME type for pages coming from the b/f cache
Adam Roben (:aroben)
Comment 4 2007-02-19 09:11:02 PST
Comment on attachment 13238 [details] Update the FrameLoader's MIME type for pages coming from the b/f cache r=me
Sam Weinig
Comment 5 2007-02-19 17:16:54 PST
Landed in r19715.
Note You need to log in before you can comment on or make changes to this bug.