        Reviewed by Adam.

- fix http://bugs.webkit.org/show_bug.cgi?id=11518
          REGRESSION (r14376): View Source not available after Back navigation from a non-HTML page

        The FrameLoader's responseMIMEType was not being updated when a page was
        brought back from the page cache.

        Moved the line that updates the MIME type from commitProvisionalLoad() to
        transitionToCommitted().

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::commitProvisionalLoad):
        (WebCore::FrameLoader::transitionToCommitted):



Canonical link: https://commits.webkit.org/16579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19715 268f45cc-cd09-0410-ab3c-d52691b4dbfc